--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,7 @@
 /* stili personalizzati per la pagina */
 
-.ms-container {
-    border: 1px dashed black;
-    min-height: 300px;
-}
-.ms-height {
-    min-height: 200px;
-}
-.ms-nav-height, .small-height {
+
+.ms_nav-height {
     min-height: 60px;
 }
 .ms_section {
@@ -37,4 +31,42 @@
 button.ms_mybutton:hover {
     background-color: #12977d;
     border-color: transparent;
+}
+.ms_bg-foot {
+    background-color: #3A546D;
+}
+#foot-link {
+    color: #1ABC9C;
+    text-decoration: none;
+}
+.ms_my-icon {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border: 1px solid;
+    border-radius: 50%;
+    margin: 0 5px;
+}
+.ms_padding-icon {
+    padding-right: 1.5px;
+}
+.ms_wrapper {
+    width: 100%;
+    background-color: #2C3E50;
+}
+.ms_small-txt {
+    font-size: 13px;
+}
+.ms_bg-nav {
+    background-color: #2C3E50;
+}
+.ms_click {
+    cursor: pointer;
+}
+.ms_nav-link {
+    list-style-type: none;
+    display: none;
 }
